--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.9",
+    "sinon": "^4.1.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
   },
