--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.183.0",
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
@@ -52,7 +53,9 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
+    "multer": "^1.3.0",
     "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
