--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "aws-sdk": "^2.183.0",
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
